fina_commit_groq

--- a/groq_expt.ipynb
+++ b/groq_expt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "101989b3",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "423f1ef1",
    "metadata": {},
    "outputs": [],
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "7bd523f1",
    "metadata": {},
    "outputs": [],
@@ -1021,7 +1021,7 @@
     "                print(reward)\n",
     "            \n",
     "            dict_ = json.loads(reward)\n",
-    "            if int(dict_[\"reward\"])  >= 90:\n",
+    "            if int(dict_[\"reward\"])  >= 80:\n",
     "                final_response = groq_response\n",
     "                break\n",
     "            else:\n",
@@ -1066,85 +1066,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7b020f01",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"feedback\": [\n",
-      "    \"You're getting bogged down in assigning numbers too early. Focus on deducing relationships between players and positions first. You've correctly identified that Edward Ellis and the placekicker both played Kurt Koch + 2 games, leading to a conflict if they are different people. Explore the implications of them being the same person. Also, consider clue 5, which you haven't fully utilized yet. It gives a direct link between the running back and either Gordon Gregg or the person who played 4 games. Try to integrate this information into your deductions.\",\n",
-      "    \"Hint: If Edward Ellis is the placekicker, what does that tell you about the other positions and the number of games they played?\"\n",
-      "  ],\n",
-      "  \"reward\": -10\n",
-      "}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 40%|████      | 2/5 [00:33<00:50, 16.68s/it]\n",
-      "10it [00:35,  3.52s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"feedback\": [\n",
-      "    \"Your reasoning is excellent and you've successfully solved the puzzle! You meticulously went through each clue and constraint, deducing the correct assignments. The final solution is accurate and well-explained.\",\n",
-      "    \"Score: [100]\"\n",
-      "  ],\n",
-      "  \"reward\": 100\n",
-      "}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"feedback\": [\n",
-      "    \"Your reasoning is very thorough and you've correctly identified the relationships between the owners and the months. You've also correctly assigned the dog breeds to the owners. However, you seem to be getting lost in the details and re-evaluating the same scenarios multiple times. Focus on the core constraints and try to build the solution step by step. You are on the right track, but try to be more concise in your reasoning.\",\n",
-      "    \"The final mapping is correct, but the reasoning could be more precise. Try to avoid redundant checks and focus on building the solution systematically.\"\n",
-      "  ],\n",
-      "  \"reward\": 80\n",
-      "}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"feedback\": [\n",
-      "    \"You're making good progress in laying out the information and trying different combinations. However, you seem to be getting stuck in loops. A key observation is that the \\\"+2 months\\\" and \\\"-1 month\\\" constraints are relative to the *month* the owner is assigned to, not necessarily a fixed starting point. Also, remember that February, March, and April each own a puppy, while January owns an adult dog. This should help narrow down the possibilities for dog breeds associated with each month. Keep trying to link the owners, months, and dog breeds together based on these constraints.\",\n",
-      "    \"Try focusing on the implications of Rosie owning a Black Lab and the timing constraint associated with it. Where could Rosie be placed, and what does that imply for the Black Lab's month? Also, consider the implications of Violet owning a Boxer. Does this give you any direct links to months or puppy/adult status?\"\n",
-      "  ],\n",
-      "  \"reward\": 30\n",
-      "}\n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtqdm\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m tqdm\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i,row \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39miterrows()):\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m11\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m i\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m:\n\u001b[0;32m      7\u001b[0m         id_ \u001b[38;5;241m=\u001b[39m row[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
    ],
@@ -1153,7 +1087,7 @@
     "import time\n",
     "for i,row in tqdm(df.iterrows()):\n",
     "\n",
-    "    if i >= 9 and i<= 100:\n",
+    "    if i >= 11 and i<= 100:\n",
     "    \n",
     "        id_ = row[\"id\"]\n",
     "        question = row[\"question\"]\n",
@@ -1163,7 +1097,7 @@
     "        # print(final_response)\n",
     "        tag = 'table_miss'\n",
     "\n",
-    "        if reward_ >= 75:\n",
+    "        if reward_ >= 40:\n",
     "            tag = \"success\"\n",
     "\n",
     "        with open(os.path.join(path, f\"{tag}_{id_}_response.txt\"), \"w\") as f:\n",
